[project]
name = "grads-game"
version = "0.1.0"
description = ""
authors = [
    {name = "ms"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "yfinance (>=0.2.51,<0.3.0)",
    "packaging (>=24.2,<25.0)",
    "tools (>=0.1.9,<0.2.0)",
    "setuptools (>=75.8.0,<76.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
